feat: Added 'About Us' block

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             Welcome to the world of nature and organic.
           </div>
           <button class="welcome__button button button-yellow">
-            Explore now
-            <div class="arrow arrow-yellow">
+            Explore Now
+            <div class="arrow">
               <img src="./img/arrow-btn.svg" alt="arrow" />
             </div>
           </button>
@@ -54,6 +54,67 @@
           </div>
         </li>
       </ul>
+    </section>
+    <section class="about-us">
+      <div class="about-us__container">
+        <img
+          class="about-us__img"
+          src="./img/grapefruit.png"
+          alt="grapefruit"
+        />
+        <div class="about-us__info">
+          <div class="about-us__title title text-green">About Us</div>
+          <div class="about-us__subtitle subtitle text-darkgrey">
+            We Believe in Organic Foods For Strong Health
+          </div>
+          <div class="about-us__description info-text">
+            Welcome to the world of natural and organic. Here you can discover
+            the bounty of nature. We have grown on the principles of health, and
+            care. We aim to give our customers a healthy chemical-free meal for
+            perfect nutrition.
+          </div>
+          <ul class="about-us__list">
+            <li class="about-us__item">
+              <img
+                class="about-us__item-img"
+                src="./img/organicFoods.svg"
+                alt="organicFoods.svg"
+              />
+              <div class="about-us__item-description">
+                <div class="item-description__title subtitle text-darkgrey">
+                  Organic Foods Only
+                </div>
+                <div class="item-description__text info-text">
+                  The Product that you ordered will be verified that we have or
+                  not if have we will start to move on with the next step.
+                </div>
+              </div>
+            </li>
+            <li class="about-us__item">
+              <img
+                class="about-us__item-img"
+                src="./img/qualityStandarts.svg"
+                alt="qualityStandarts"
+              />
+              <div class="about-us__item-description">
+                <div class="item-description__title subtitle text-darkgrey">
+                  Quality Standards
+                </div>
+                <div class="item-description__text info-text">
+                  Once your product is packed it will be delivered to your
+                  nearby locality you can directly visit the to buy the product.
+                </div>
+              </div>
+            </li>
+          </ul>
+          <button class="about-us__button button button-darkgrey">
+            Shop Now
+            <div class="arrow">
+              <img src="./img/arrow-btn.svg" alt="arrow" />
+            </div>
+          </button>
+        </div>
+      </div>
     </section>
   </body>
 </html>
