--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <header class="header">
       <img src="./img/logo.svg" alt="logo" class="header-logo logo" />
       <nav class="nav">
-        <ul class="header-menu">
-          <li class="menu-element">Home</li>
-          <li class="menu-element">About Us</li>
-          <li class="menu-element">Shop</li>
-          <li class="menu-element">Pages</li>
-          <li class="menu-element">Contact Us</li>
+        <ul class="header__menu menu">
+          <li class="menu__item">Home</li>
+          <li class="menu__item">About Us</li>
+          <li class="menu__item">Shop</li>
+          <li class="menu__item">Pages</li>
+          <li class="menu__item">Contact Us</li>
         </ul>
       </nav>
-      <button class="basket">
-        <img class="basket-img" src="./img/basket.png" alt="basket" />
-        <span class="basket-text">Cart</span>
-        <span class="basket-quantity">0</span>
+      <button class="header__basket">
+        <img class="header__basket-img" src="./img/basket.png" alt="basket" />
+        <span class="header__basket-text">Cart</span>
+        <span class="header__basket-quantity">0</span>
       </button>
-      <section class="welcome">
+      <section class="header__welcome welcome">
         <div class="welcome__container">
           <div class="welcome__title title">Made with nature</div>
           <div class="welcome__subtitle subtitle">
@@ -40,20 +40,22 @@
       </section>
     </header>
     <section class="short-info">
-      <ul class="short-info__list">
-        <li class="short-info__item">
-          <div class="short-info__title title text-white">Natural!!</div>
-          <div class="short-info__subtitle subtitle text-white">
-            Get Garden Fresh Fruits
-          </div>
-        </li>
-        <li class="short-info__item">
-          <div class="short-info__title title text-green">Offer!!</div>
-          <div class="short-info__subtitle subtitle text-darkgrey">
-            Get 10% off on Vegetables
-          </div>
-        </li>
-      </ul>
+      <div class="short-info__container">
+        <ul class="short-info__list">
+          <li class="short-info__item">
+            <div class="short-info__title title text-white">Natural!!</div>
+            <div class="short-info__subtitle subtitle text-white">
+              Get Garden Fresh Fruits
+            </div>
+          </li>
+          <li class="short-info__item">
+            <div class="short-info__title title text-green">Offer!!</div>
+            <div class="short-info__subtitle subtitle text-darkgrey">
+              Get 10% off on Vegetables
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="about-us">
       <div class="about-us__container">
@@ -113,6 +115,14 @@
               <img src="./img/arrow-btn.svg" alt="arrow" />
             </div>
           </button>
+        </div>
+      </div>
+    </section>
+    <section class="our-product">
+      <div class="our-product__container">
+        <div class="our-product__title title">Made with nature</div>
+        <div class="our-product__subtitle subtitle">
+          Welcome to the world of nature and organic.
         </div>
       </div>
     </section>
