feat: Added 'Organic', 'Testimonial', 'Offer Products', 'Eco Friendly', 'Type-goods' sections

--- a/index.html
+++ b/index.html
@@ -120,9 +120,275 @@
     </section>
     <section class="our-product">
       <div class="our-product__container">
-        <div class="our-product__title title">Made with nature</div>
+        <div class="our-product__title title">Organic</div>
         <div class="our-product__subtitle subtitle">
-          Welcome to the world of nature and organic.
+          Our Products
+        </div>
+        <div class="our-product__goods">
+          <div class="our-product__good good">
+            <span class="good__label label">Vegetable</span>
+            <img
+              class="good__img"
+              src="./img/our-products/CalabreseBroccoli.png"
+              alt="Calabrese Broccoli"
+            />
+            <div class="good__title">Calabrese Broccoli</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 25.00 USD</div>
+              <div class="good__new-price">$ 21.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="our-product__good good">
+            <span class="good__label label">Vegetable</span>
+            <img
+              class="good__img"
+              src="./img/our-products/FreshCorn.png"
+              alt="FreshCorn"
+            />
+            <div class="good__title">Fresh Corn</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 21.23 USD</div>
+              <div class="good__new-price">$ 18.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="our-product__good good">
+            <span class="good__label label">Millets</span>
+            <img
+              class="good__img"
+              src="./img/our-products/DriedPistachio.png"
+              alt="DriedPistachio"
+            />
+            <div class="good__title">Dried Pistachio</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 61.00 USD</div>
+              <div class="good__new-price">$ 48.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="our-product__good good">
+            <span class="good__label label">Vegetable</span>
+            <img
+              class="good__img"
+              src="./img/our-products/VeganRedTomato.png"
+              alt="VeganRedTomato"
+            />
+            <div class="good__title">Vegan Red Tomato</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 14.00 USD</div>
+              <div class="good__new-price">$ 9.37 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="our-product__good good">
+            <span class="good__label label">Fruits</span>
+            <img
+              class="good__img"
+              src="./img/our-products/OrganicAlmonds.png"
+              alt="OrganicAlmonds"
+            />
+            <div class="good__title">Organic Almonds</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 21.00 USD</div>
+              <div class="good__new-price">$ 18.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="our-product__good good">
+            <span class="good__label label">Millets</span>
+            <img
+              class="good__img"
+              src="./img/our-products/BrownHazelnut.png"
+              alt="BrownHazelnut"
+            />
+            <div class="good__title">Brown Hazelnut</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 43.00 USD</div>
+              <div class="good__new-price">$ 34.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="testimonial">
+      <div class="testimonial__container">
+        <div class="testimonial__title title text-green">Testimonial</div>
+        <div class="testimonial__subtitle subtitle text-darkgrey">
+          What Our Customer Saying?
+        </div>
+        <div class="testimonial__reviews reviews">
+          <img
+            class="reviews__img"
+            src="./img/photo-profile.png"
+            alt="photo-profile"
+          />
+          <img
+            class="reviews__stars"
+            src="./img/customer-rating.png"
+            alt="customer-rating"
+          />
+          <div class="reviews__comment info-text">
+            The quality of organic produce is extremely high, the service is
+            second to none and the taste of the food takes me back to my
+            childhood when we were growing our own.
+          </div>
+          <div class="reviews__author">Sara Taylor</div>
+          <div class="reviews__type">Consumer</div>
+          <hr class="reviews__line" />
+          <ul class="reviews__list">
+            <li class="reviews__item">
+              <div class="reviews__result result">
+                <div class="result__title">100%</div>
+                <div class="result__subtitle">Organic</div>
+              </div>
+            </li>
+            <li class="reviews__item">
+              <div class="reviews__result result">
+                <div class="result__title">285</div>
+                <div class="result__subtitle">Active Product</div>
+              </div>
+            </li>
+            <li class="reviews__item">
+              <div class="reviews__result result">
+                <div class="result__title">385+</div>
+                <div class="result__subtitle">Organic Orchads</div>
+              </div>
+            </li>
+            <li class="reviews__item">
+              <div class="reviews__result result">
+                <div class="result__title">25+</div>
+                <div class="result__subtitle">Years of Farming</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="offer-products">
+      <div class="offer-products__container">
+        <div class="offer-products__blocks">
+          <div class="offer-products__left-block">
+            <div class="offer-products__title title">Offer Products</div>
+            <div class="offer-products__subtitle subtitle text-white">
+              We Offer Organic for You
+            </div>
+          </div>
+          <div class="offer-products__right-block">
+            <button class="offer-products__button button button-yellow">
+              View All products
+              <div class="arrow-yellow">
+                <img src="./img/arrow-btn.svg" alt="arrow" />
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="offer-products__goods">
+          <div class="offer-products__good good">
+            <span class="good__label label">Vegetable</span>
+            <img
+              class="good__img"
+              src="./img/our-products/VeganRedTomato.png"
+              alt="VeganRedTomato"
+            />
+            <div class="good__title">Vegan Red Tomato</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 14.00 USD</div>
+              <div class="good__new-price">$ 9.37 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="offer-products__good good">
+            <span class="good__label label">Fruits</span>
+            <img
+              class="good__img"
+              src="./img/our-products/OrganicAlmonds.png"
+              alt="OrganicAlmonds"
+            />
+            <div class="good__title">Organic Almonds</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 21.00 USD</div>
+              <div class="good__new-price">$ 18.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+          <div class="offer-products__good good">
+            <span class="good__label label">Vegetable</span>
+            <img
+              class="good__img"
+              src="./img/our-products/FreshCorn.png"
+              alt="FreshCorn"
+            />
+            <div class="good__title">Fresh Corn</div>
+            <hr class="good__line" />
+            <div class="good__price-quality">
+              <div class="good__old-price">$ 21.23 USD</div>
+              <div class="good__new-price">$ 18.00 USD</div>
+              <img class="good__img-stars" src="./img/stars.svg" alt="stars" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="eco-friendly">
+      <div class="eco-friendly__container">
+        <img
+          class="eco-friendly__img"
+          src="./img/eco-friendly.png"
+          alt="eco-friendly"
+        />
+        <div class="eco-friendly__description">
+          <div class="eco-friendly__title title text-green">Eco Friendly</div>
+          <div class="eco-friendly__subtitle subtitle text-darkgrey">
+            From our Farm to your Home.
+          </div>
+          <div class="eco-friendly__article">
+            <div class="eco-friendly__name-article">Choose Your Products</div>
+            <div class="eco-friendly__text-article info-text">
+              In our listing, we have several collections of organic products.
+              This is the place where you need to choose the product you want.
+            </div>
+          </div>
+          <div class="eco-friendly__article">
+            <div class="eco-friendly__name-article">
+              Farmers will produce it
+            </div>
+            <div class="eco-friendly__text-article info-text">
+              The Product that you ordered will be verified that we have or not
+              if have we will start to move on with the next step.
+            </div>
+          </div>
+          <div class="eco-friendly__article">
+            <div class="eco-friendly__name-article">We Can Delivery too</div>
+            <div class="eco-friendly__text-article info-text">
+              If you are not comfortable going to the nearby market place we
+              also will deliver your product to your doorstep.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="type-goods">
+      <div class="type-goods__container">
+        <div class="type-goods__cards">
+          <div class="type-goods__card card">
+            <span class="card__name">Fruit Juice</span>
+          </div>
+          <div class="type-goods__card card">
+            <span class="card__name">Organic Food</span>
+          </div>
+          <div class="type-goods__card card">
+            <span class="card__name">Nuts Cookies</span>
+          </div>
         </div>
       </div>
     </section>
