Added 'Footer' section

--- a/index.html
+++ b/index.html
@@ -392,5 +392,200 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <section class="footer__news news">
+        <div class="news__container">
+          <div class="news__blocks">
+            <div class="news__left-block">
+              <div class="news__title title text-green">News</div>
+              <div class="news__subtitle subtitle text-darkgrey">
+                Discover The recent content about organic products
+              </div>
+            </div>
+            <div class="news__right-block">
+              <button class="news__button button button-white">
+                More News
+                <div class="arrow-white">
+                  <img src="./img/arrow-btn.svg" alt="arrow" />
+                </div>
+              </button>
+            </div>
+          </div>
+          <div class="news__images">
+            <img
+              class="news__image"
+              src="./img/news/cabbage.png"
+              alt="cabbage"
+            />
+            <img
+              class="news__image"
+              src="./img/news/tomatoes.png"
+              alt="tomatoes"
+            />
+          </div>
+          <div class="news__articles">
+            <div class="news__article article">
+              <div class="article__author">
+                <img
+                  class="article__symbol"
+                  src="./img/footer//news/symbol.png"
+                  alt="symbol"
+                />
+                <div class="article__full-name">
+                  Kristina Castle
+                </div>
+              </div>
+              <div class="article__name">
+                Everything You Need to Know About Organic
+              </div>
+              <div class="article__text">
+                Organic farming is the only way that you still can experience
+                the real world.
+              </div>
+              <div class="article__button">
+                View More
+                <div class="article__arrow arrow-small">
+                  <img src="./img/footer/news/arrow-small.png" alt="arrow" />
+                </div>
+              </div>
+            </div>
+            <div class="news__article article">
+              <div class="article__author">
+                <img
+                  class="article__symbol"
+                  src="./img/footer/news/symbol.png"
+                  alt="symbol"
+                />
+                <div class="article__full-name">
+                  Alex Louis
+                </div>
+              </div>
+              <div class="article__name">
+                Organic Fruits: Surprising Benefits and Facts
+              </div>
+              <div class="article__text">
+                The world of nature has grown on the principles of health,
+                ecology, and care.
+              </div>
+              <div class="article__button">
+                View More
+                <div class="article__arrow arrow-small">
+                  <img src="./img/footer/news/arrow-small.png" alt="arrow" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="footer__subscribe subscribe">
+        <div class="subscribe__container">
+          <div class="subscribe__title subtitle text-white">
+            Subscribe Our Newsletter
+          </div>
+          <form class="subscribe__form">
+            <input
+              class="subscribe__input"
+              type="text"
+              placeholder="Enter your email address"
+            />
+            <button class="subscribe__button button button-darkgrey">
+              Subscribe
+              <div class="subscribe__arrow arrow">
+                <img
+                  class="subscribe__arrow-size"
+                  src="./img/footer/arrow-footer.png"
+                  alt="arrow"
+                />
+              </div>
+            </button>
+          </form>
+        </div>
+      </section>
+      <section class="footer__general-info general-info">
+        <div class="general-info__container">
+          <div class="general-info__contact-us">
+            <div class="general-info__title subtitle">Contact Us</div>
+            <div class="general-info__data">
+              <div class="general-info__type-contact">Email</div>
+              <div class="general-info__contact-data">
+                needhelp@organick.com
+              </div>
+            </div>
+            <div class="general-info__data">
+              <div class="general-info__type-contact">Phone</div>
+              <div class="general-info__contact-data">
+                123 (1254) 1452
+              </div>
+            </div>
+            <div class="general-info__data">
+              <div class="general-info__type-contact">Address</div>
+              <div class="general-info__contact-data">
+                88 Road, Brooklyn Street, USA
+              </div>
+            </div>
+          </div>
+          <div class="general-info__social-media">
+            <img
+              class="general-info__logo logo"
+              src="./img/logo.svg"
+              alt="logo"
+            />
+            <div class="general-info__text info-text">
+              We are a popular and farming company aspiring to be a leader in
+              the Organic food industry.
+            </div>
+            <ul class="general-info__list">
+              <li class="general-info__item">
+                <img
+                  class="general-info__img"
+                  src="./img/footer/contacts/fb.png"
+                  alt="fb"
+                />
+              </li>
+              <li class="general-info__item">
+                <img
+                  class="general-info__img"
+                  src="./img/footer/contacts/twitter.png"
+                  alt="twitter"
+                />
+              </li>
+              <li class="general-info__item">
+                <img
+                  class="general-info__img"
+                  src="./img/footer/contacts/instagram.png"
+                  alt="instagram"
+                />
+              </li>
+              <li class="general-info__item">
+                <img
+                  class="general-info__img"
+                  src="./img/footer/contacts/pinterest.png"
+                  alt="pinterest"
+                />
+              </li>
+            </ul>
+          </div>
+          <div class="general-info__utility-pages utility-pages">
+            <div class="utility-pages__title subtitle">Utility Pages</div>
+            <ul class="utility-pages__list">
+              <li class="utility-pages__item">Style Guide</li>
+              <li class="utility-pages__item">Protected</li>
+              <li class="utility-pages__item">Page Not Found</li>
+              <li class="utility-pages__item">Changelog</li>
+              <li class="utility-pages__item">Licenses</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="footer__copyright copyright">
+        <hr class="copyright__line" />
+        <ul class="copyright__list">
+          <li class="copyright__item">Copyright © Organick | Designed by</li>
+          <li class="copyright__item">VictorFlow</li>
+          <li class="copyright__item">- Powered by</li>
+          <li class="copyright__item">Webflow</li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
